<resources>
    <string name="app_name">Recuperacion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Android" translatable="false">Android</string>
    <string name="Category" translatable="false">Category</string>
    <string name="Precio">Precio</string>
    <string name="Disponible">Disponible</string>
    <string name="Unidades">Ud/s</string>
    <string name="Euro">€</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Stock">Stock</string>
    <string name="Producto">Producto</string>
    <string name="PrecioRebajado">Precio Rebajado</string>
    <string name="Url">Url de la Imagen</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Añadir">AÑADIR PRODUCTO</string>
    <string name="UltimasUni">Ultimas Unidades</string>
    <string name="Casa">Casa</string>
    <string name="Favorito">Favorito</string>
</resources>