<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FragmentDetail" >


    <ImageView
        android:id="@+id/iv_product_detail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Android"
        android:textAppearance="@style/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_product_detail" />

    <TextView
        android:id="@+id/tv_count_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Android"
        android:textAppearance="@style/subtitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_detail" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Unidades"
        android:textAppearance="@style/subtitulo"
        app:layout_constraintBottom_toBottomOf="@+id/tv_count_detail"
        app:layout_constraintStart_toEndOf="@+id/tv_count_detail"
        app:layout_constraintTop_toTopOf="@+id/tv_count_detail" />

    <TextView
        android:id="@+id/tv_price_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Android"
        android:textAppearance="@style/subtitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_count_detail" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Euro"
        android:textAppearance="@style/subtitulo"
        app:layout_constraintBottom_toBottomOf="@+id/tv_price_detail"
        app:layout_constraintStart_toEndOf="@+id/tv_price_detail"
        app:layout_constraintTop_toTopOf="@+id/tv_price_detail" />

    <TextView
        android:id="@+id/tv_priceDis_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Android"
        android:visibility="invisible"
        android:textAppearance="@style/descuento"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/tv_count_detail" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Euro"
        android:visibility="invisible"
        android:textAppearance="@style/descuento"
        app:layout_constraintBottom_toBottomOf="@+id/tv_priceDis_detail"
        app:layout_constraintStart_toEndOf="@+id/tv_priceDis_detail"
        app:layout_constraintTop_toTopOf="@+id/tv_priceDis_detail"
        />

    <TextView
        android:id="@+id/tv_disponible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/Disponible"
        android:visibility="invisible"
        android:textAppearance="@style/titulo"
        app:layout_constraintBottom_toBottomOf="@+id/tv_count_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_count_detail" />

    <TextView
        android:id="@+id/tv_description_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/Descripcion"
        android:textAppearance="@style/subtitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price_detail" />




</androidx.constraintlayout.widget.ConstraintLayout>